<resources>
    <string name="app_name">Class-ify: School Assistant and Planner</string>
    <string name="app_link">https://plumeacademyassistant.com/</string>
    <string name="DATABASE_NAME" translatable="false">PLUME DATABASE</string>
    <string name="fb_already_authenticated">An account using this email already exists. Please log in with your email instead.</string>
    <string name="fb_login_protocol_scheme">fb1232139486864891</string>
    <string name="facebook_app_id">1731101926904025</string>
    <string name="google_web_client_id">62922774016-dthkdc3godlv5ps9tl6qf4abdgm0tv01.apps.googleusercontent.com</string>
    <string name="nav_classes">Classes</string>
    <string name="nav_completedTasks">Completed tasks</string>
    <string name="nav_people">Peers</string>
    <string name="nav_timetable">Timetable</string>
    <string name="nav_requests">Requests</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_help">Help</string>
    <string name="nav_about">About Class-ify</string>
    <string name="hyphen">&#45;</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="first">1st</string>
    <string name="second">2nd</string>
    <string name="third">3rd</string>
    <string name="fourth">4th</string>
    <string name="fifth">5th</string>
    <string name="sixth">6th</string>
    <string name="seventh">7th</string>
    <string name="eighth">8th</string>
    <string name="ninth">9th</string>
    <string name="tent">10th</string>
    <string name="eleventh">11th</string>
    <string name="twelfth">12th</string>
    <string name="sunday_initial">S</string>
    <string name="monday_initial">M</string>
    <string name="tuesday_initial">T</string>
    <string name="wednesday_initial">W</string>
    <string name="thursday_initial">T</string>
    <string name="friday_initial">F</string>
    <string name="saturday_initial">S</string>
    <string name="sunday_abr">Sun</string>
    <string name="monday_abr">Mon</string>
    <string name="tuesday_abr">Tue</string>
    <string name="wednesday_abr">Wed</string>
    <string name="thursday_abr">Thu</string>
    <string name="friday_abr">Fri</string>
    <string name="saturday_abr">Sat</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="A">A</string>
    <string name="B">B</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="set_date">Set date</string>
    <string name="morning">Morning</string>
    <string name="afternoon">Afternoon</string>
    <string name="evening">Evening</string>
    <string name="morning_time">Morning (9:00am)</string>
    <string name="afternoon_time">Afternoon (2:00pm)</string>
    <string name="evening_time">Evening (6:00pm)</string>
    <string name="set_time">Set time</string>
    <string name="a_day">A Day</string>
    <string name="b_day">B Day</string>
    <string name="name_hint">Name</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="confirm_delete_shared_title">Are you sure you don\'t want to share this class?</string>
    <string name="email_hint">Email</string>
    <string name="sign_up_button_label">Sign Up</string>
    <string name="signup_error_message">Please make sure you fill in all the fields!</string>
    <string name="signup_error_title">Error!</string>
    <string name="signup_error_message_no_confirm">Please confirm your password</string>
    <string name="signup_error_message_wrong_confirm">Passwords don՚t match. Please try again.</string>
    <string name="signup_success">Account successfully created! You can now Login.</string>
    <string name="add_item">Add New Item</string>
    <string name="login_error_message">Email or password is invalid</string>
    <string name="login_error_title">Error!</string>
    <string name="login_button_label">Log in</string>
    <string name="login_button_label_google">Log in with Google</string>
    <string name="sign_up_text">New here? Sign Up!</string>
    <string name="title_activity_login">Sign in</string>
    <string name="login_button_facebook">Sign in with Facebook</string>
    <string name="action_login">Log in</string>
    <string name="action_logout">Log out</string>
    <string name="action_invite">Invite Peers</string>
    <string name="accept">Accept</string>
    <string name="acceptPeerHeader">%1$s wants to add you in these classes</string>
    <string name="activity_classes_label">Classes</string>
    <string name="activity_classes_splash_no_classes">You have no classes</string>
    <string name="activity_completedTasks_dialog_title">Delete all items?</string>
    <string name="activity_completedTasks_label">Completed Tasks</string>
    <string name="activity_completedTasks_splashText">You have no completed tasks</string>
    <string name="activity_new_schedule_label">New Class</string>
    <string name="activity_new_task_label">New Task</string>
    <string name="activity_tasksDetail_restore_dialog_title">Restore task?</string>
    <string name="add">Add</string>
    <string name="add_new_class">Add a new class</string>
    <string name="add_peer">Add a new Peer</string>
    <string name="AddByUsername">Add by Username</string>
    <string name="addPeers">Add Peers</string>
    <string name="addToCalendar">Add to Calendar</string>
    <string name="aiSlide1Desc">Manage your schedules and tasks all from your phone</string>
    <string name="aiSlide1Title">Your Digital Planner</string>
    <string name="aiSlide2Desc">Share tasks and make working together even easier</string>
    <string name="aiSlide2Title">Collaborate with Peers</string>
    <string name="aiSlide4Desc">Click \"Done\" to open up your digital school planner</string>
    <string name="aiSlide4Title">You\'re All Set!</string>
    <string name="all_classes">All Classes</string>
    <string name="allow">Allow</string>
    <string name="cancel">Cancel</string>
    <string name="category_other_settings_title">Other settings</string>
    <string name="check_internet">Please check your network connection</string>
    <string name="choose_colour">Choose colour</string>
    <string name="Class">Class</string>
    <string name="class_time_one_blockbased">Block based</string>
    <string name="class_time_one_periodbased">Period based</string>
    <string name="class_time_one_timebased">Time based</string>
    <string name="class_time_one_title">Schedule type</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="field_attach_file">Attach file</string>
    <string name="field_dropdown_class">Class</string>
    <string name="field_dropdown_type">Type</string>
    <string name="field_dropdown_type_menu_item_homework">Homework</string>
    <string name="field_dropdown_type_menu_item_other">Other</string>
    <string name="field_dropdown_type_menu_item_project">Project</string>
    <string name="field_dropdown_type_menu_item_revision">Revision</string>
    <string name="field_dropdown_type_menu_item_test">Test</string>
    <string name="field_due_date">Due date</string>
    <string name="field_hint_description">Description</string>
    <string name="field_set_reminder">Set reminder</string>
    <string name="general">General</string>
    <string name="new_schedule_hint">Enter a title</string>
    <string name="none">None</string>
    <string name="planner">Planner</string>
    <string name="preference_category_appearance">Appearance settings</string>
    <string name="preference_category_general">General settings</string>
    <string name="schedule_type">Schedule type</string>
    <string name="settings_about_plume_title">About Class-ify</string>
    <string name="settings_block_format_title">Block format</string>
    <string name="settings_week_format_title">Week format</string>
    <string name="settings_class_mute_title">Mute phone during classes</string>
    <string name="settings_class_notification_dialog_title">Class notifications (minutes before)</string>
    <string name="settings_class_notification_title">Add Classes to Google Calendar</string>
    <string name="settings_date_format_title">Date format</string>
    <string name="settings_theme_background">Background Colour</string>
    <string name="settings_theme_primary_title">Primary Colour</string>
    <string name="settings_theme_secondary_title">Secondary Colour</string>
    <string name="settings_theme_title">Theme</string>
    <string name="settings_theme_title_colour">Text Colour</string>
    <string name="timeTask">Setup a timer</string>
    <string name="week_alt">Alternating week schedule</string>
    <string name="week_number">Week number</string>
    <string name="Assistant">School Assistant and Planner</string>
    <string name="Version">Version 1.5.3</string>
    <string name="Weblink" translatable="false">https://class-ify.com</string>
    <string name="Contact">Contact us</string>
    <string name="Email">Email:&#160;</string>
    <string name="Plume_Email">team@class-ify.com</string>
    <string name="Coding">Lead Developer:</string>
    <string name="Eric" translatable="false">Eric Decanini</string>
    <string name="Graphics">Graphics and design:</string>
    <string name="Reiss" translatable="false">Reiss Tozer</string>
    <string name="Testers">App testers:</string>
    <string name="Connor" translatable="false">Connor Hutchings</string>
    <string name="Icons8">Some icons used were made by <a href='https://icons8.com/'>Icons8</a>.
        Libraries used include <a href='https://github.com/QuadFlask/colorpicker'>this made by QuadFlask</a></string>
    <string name="KEY_PREFERENCE_BASIS" translatable="false">KEY_PREFERENCE_BASIS</string>
    <string name="KEY_PREFERENCE_WEEKTYPE" translatable="false">KEY_PREFERENCE_KEY</string>
    <string name="KEY_SETTINGS_CLASS_NOTIFICATION" translatable="false">KEY_SETTINGS_CLASS_NOTIFICATION</string>
    <string name="KEY_THEME_CATEGORY_GENERAL" translatable="false">KEY_THEME_CATEGORY_GENERAL</string>
    <string name="KEY_THEME_CATEGORY_PLANNER" translatable="false">KEY_THEME_CATEGORY_PLANNER</string>
    <string name="KEY_WEEK_NUMBER" translatable="false">KEY_WEEK_NUMBER</string>
    <string name="KEY_CATEGORY_OTHER_SETTINGS" translatable="false">KEY_CATEGORY_OTHER_SETTINGS</string>
    <string name="KEY_SETTINGS_ABOUT_PLUME" translatable="false">KEY_SETTINGS_ABOUT_PLUME</string>
    <string name="KEY_SETTINGS_BLOCK_FORMAT" translatable="false">KEY_SETTINGS_BLOCK_FORMAT</string>
    <string name="KEY_SETTINGS_WEEK_FORMAT" translatable="false">KEY_SETTINGS_WEEK_FORMAT</string>
    <string name="KEY_SETTINGS_CATEGORY_APPEARANCE" translatable="false">KEY_SETTINGS_CATEGORY_APPEARANCE</string>
    <string name="KEY_SETTINGS_CLASS_MUTE" translatable="false">KEY_SETTINGS_CLASS_MUTE</string>
    <string name="KEY_SETTINGS_DATE_FORMAT" translatable="false">KEY_SETTINGS_DATE_FORMAT</string>
    <string name="KEY_SETTINGS_THEME" translatable="false">KEY_SETTINGS_THEME</string>
    <string name="KEY_THEME_BACKGROUND_COLOUR" translatable="false">KEY_SETTINGS_THEME_BACKGROUND</string>
    <string name="KEY_SETTINGS_THEME_PRIMARY" translatable="false">KEY_SETTINGS_THEME_PRIMARY</string>
    <string name="KEY_SETTINGS_THEME_SECONDARY" translatable="false">KEY_SETTINGS_THEME_SECONDARY</string>
    <string name="KEY_SETTINGS_CATEGORY_GENERAL" translatable="false">KEY_SETTINGS_CATEGORY_GENERAL</string>
</resources>