<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group>
        <item
            android:id="@+id/nav_classes"
            android:icon="@drawable/nav_classes"
            android:title="@string/nav_classes" />
        <item
            android:id="@+id/nav_people"
            android:icon="@drawable/ic_group_black_24dp"
            android:title="@string/nav_people" />
        <item android:id="@+id/nav_requests"
            android:icon="@drawable/ic_attachment_black_24dp"
            app:actionLayout="@layout/menu_counter"
            android:title="@string/nav_requests" />
        <item
            android:id="@+id/nav_completedTasks"
            android:icon="@drawable/ic_assignment_turned_in_black_24dp"
            android:title="@string/nav_completedTasks" />
    </group>

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/nav_settings" />
    <!--<item-->
        <!--android:id="@+id/nav_help"-->
        <!--android:icon="@drawable/ic_help_black_24dp"-->
        <!--android:title="@string/nav_help" />-->

</menu>