<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:title="@string/delete"
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete_white"
        android:orderInCategory="200"
        app:showAsAction="ifRoom" />

    <item android:title="@string/edit"
        android:id="@+id/action_edit"
        android:icon="@drawable/ic_edit_white"
        android:orderInCategory="100"
        app:showAsAction="ifRoom" />

    <item android:title="@string/timeTask"
        android:id="@+id/action_time"
        android:icon="@drawable/ic_alarm_on_white_24dp"
        android:orderInCategory="50"
        app:showAsAction="ifRoom"
        android:visible="false"/>

    </menu>