<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.pdt.plume.NewTaskActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/new_task_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/placeholder_sixtyfour" />

        <EditText
            android:id="@+id/field_new_task_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/new_task_icon"
            android:layout_toRightOf="@id/new_task_icon"
            android:hint="@string/new_schedule_hint" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/field_new_task_title"
            android:layout_toEndOf="@id/new_task_icon"
            android:layout_toRightOf="@id/new_task_icon">

            <LinearLayout
                android:id="@+id/field_class_dropdown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/field_class_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/field_dropdown_class" />
                <ImageView
                    android:src="@drawable/ic_dropdown_black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/field_type_dropdown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/field_type_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/field_dropdown_type" />
                <ImageView
                    android:src="@drawable/ic_dropdown_black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#777777" />

    <EditText
        android:id="@+id/field_new_task_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:gravity="start"
        android:hint="@string/field_hint_description"
        android:minLines="5"
        android:minHeight="?listPreferredItemHeight"
        android:paddingBottom="20dp"
        android:paddingLeft="?listPreferredItemPaddingLeft"
        android:paddingRight="?listPreferredItemPaddingRight"
        android:paddingTop="8dp" />

    <TextView
        android:id="@+id/field_new_task_duedate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/field_due_date" />

    <TextView
        android:id="@+id/field_new_task_attach"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/field_attach_file" />

    <TextView
        android:id="@+id/field_new_task_reminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/field_set_reminder" />

</LinearLayout>
