<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.pdt.plume.AboutActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_about"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="64dp"
        android:layout_marginRight="64dp"
        android:layout_marginTop="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/about_appicon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/art_appicon" />
                <TextView
                    android:id="@+id/about_plume"
                    android:layout_marginTop="4dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/Plume"
                    android:layout_toRightOf="@id/about_appicon"
                    android:layout_toEndOf="@id/about_appicon"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"/>
                <TextView
                    android:id="@+id/about_assistant"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/Assistant"
                    android:textColor="@color/black"
                    android:layout_toRightOf="@id/about_appicon"
                    android:layout_toEndOf="@id/about_appicon"
                    android:layout_below="@id/about_plume"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"/>
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/Version"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/Weblink"
                android:layout_marginLeft="8dp"
                android:linksClickable="true"
                android:textColorLink="@color/hyperlink"
                android:autoLink="web"
                android:layout_marginStart="8dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray_500"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:text="@string/Contact"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:textColor="@color/black"
                    android:text="@string/Email"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:textColorLink="@color/hyperlink"
                    android:linksClickable="true"
                    android:autoLink="email"
                    android:text="@string/Plume_Email"/>
            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray_500"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:text="@string/Developed"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/black"
                android:text="@string/PDT"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"/>

            <TextView
                android:layout_marginTop="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:text="@string/Coding"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/black"
                android:text="@string/Eric"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"/>

            <TextView
                android:layout_marginTop="6dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:text="@string/Graphics"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/black"
                android:text="@string/Reiss"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"/>

            <TextView
                android:layout_marginTop="6dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:text="@string/Testers"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/black"
                android:text="@string/Connor"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"/>

            <TextView
                android:layout_marginTop="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/Icons8"
                android:linksClickable="true"
                android:autoLink="web"
                android:textColorLink="@color/hyperlink"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"/>

        </LinearLayout>

    </ScrollView>

</FrameLayout>
